CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

21 May 2008
+ File::checkmimetype - Extension is forced to lowercase to allow
  proper file checking. 

20 May 2008
+ Changed values in Key to their appropriate defines.
+ Added some error checks in pagesmith conversion.
+ Thumbnail directory fixes added to pagesmith and category
  conversion.


19 May 2008
+ Added new language define IGNORE_BROWSER_LANGUAGE. Prevents
  phpwebsite from using the browser's language preferences if the user
  has not set their language cookie.
+ Updated: core/conf/language.php

29 April 2008
+ Added parameter to phpws_stats that gives you language information.
+ Bug# 1778308 - Uninstalled modules are no longer accessible.
+ Removed pass by reference
+ Removed category content variable from themes.
+ Added active parameter to installModList

28 April 2008
+ The Italian translation was causing problems using the confirm
  javascript. It was using " instead of &quot;. I added a check in the
  default.php to change it back.
+ Added moduleLimit instructions to File_Manager.txt
+ Added warning to compile language support to the server before
  testing languages.

24 April 2008
+ Added clear style options on paragraphs to style selection.
+ Added some error checks to XMLParser.
+ Updated: javascript/editors/fckeditor/editor/phpwsstyles.xml

23 April 2008
+ Form.php - changed POST to REQUEST in testDate and getPostedDate
+ DBPager
  o Added caching system to retain pager settings. Set with
    cacheQueries function.
  o Added convertDate function to format date columns
  o Added addSortHeader function to allow a clickable column header.
+ Javascript
  o Added a checkbox trigger for check all.
  o Fixed a bug in open_window that prevented button use.

+ Updated: javascript/check_all/body.js, default.php, head.js,
           README.txt
           javascript/open_window/default.php

+ Themes