@@ -1,0 +1,1 @@
+<input type="button" value="{link}" onclick="javascript:show_prompt('{question}', '{address}', '{answer}', '{value_name}'); return false" />
