@@ -5,6 +5,7 @@ $vars['address']    = 'index.php?module=mymode&amp;command=change_name';
 $vars['answer']     = 'Type the name here...';
 $vars['value_name'] = 'new_name';
 $vars['link']       = 'Click on me to name this';
+$vars['type']       = 'link'; // or button
 
 echo javascript('prompt', $vars);
 
